tests/snapshots/assets__check_file@unit-math-sqrt.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/sqrt.typ
snapshot_kind: text
---
$ √2345 $
$ ∜2345^3 $
