tests/snapshots/assets__check_file@unit-math-var-in-math.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/var-in-math.typ
---
#let f(content) = {
  if type(content) in (float, int) {
    content = $#content$
  }
}

$
lr([sum_(k = 0)^n e^(k^2)], size: #50%)
$

#let x = 5
$ #x < 17 $
