tests/snapshots/assets__check_file@unit-op-binary.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/op/binary.typ
snapshot_kind: text
---
#{
  let f(
    x,
  ) = (
    x
  )
  f(
    "Unsupported content type "
      + type(content)
      + "! "
      + "Provide your own `draw-node` implementation.",
  )
}
