tests/snapshots/assets__check_file@unit-op-binary.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/op/binary.typ
snapshot_kind: text
---
#{
  let f(x) = x
  f("Unsupported content type " + type(content) + "! " + "Provide your own `draw-node` implementation.")
}
